[package]
name = "acto"
version = "0.2.2"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2021"
description = "light-weight Actor library for Rust"
repository = "https://github.com/rkuhn/acto"
documentation = "https://docs.rs/acto"
license = "Apache-2.0 OR MIT"
keywords = ["actors", "concurrency"]
categories = ["concurrency"]

[dependencies]
parking_lot = "0.12.1"
smol_str = "0.1.23"
tokio = { version = "1.21", features = ["rt", "sync"], optional = true }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
