[package]
name = "acto"
version = "0.2.6"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2021"
description = "light-weight Actor library for Rust"
repository = "https://github.com/rkuhn/acto"
documentation = "https://docs.rs/acto"
license = "Apache-2.0 OR MIT"
keywords = ["actors", "concurrency"]
categories = ["concurrency"]

[dependencies]
parking_lot = "0.12.1"
pin-project-lite = "0.2.9"
smol_str = { version = "0.1.23", default-features = false }
tokio = { version = "1.21", features = ["rt", "sync"], optional = true }
tracing = { version = "0.1.37", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
